2008-11-21  Mike Krüger  <mkrueger@novell.com>

	* Gui/DataProvider.cs: fixed 'Bug 447040 - Error in text editor
	extension chain (new case)'.

2008-11-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CTextEditorExtension.cs: Fix Bug 446207 - [Regression] C
	auto-formatting screws up.

2008-11-18  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: Allow running C projects.

	* Makefile.am: Fix parallel build issues.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* CBinding.addin.xml: Bump MD version.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/DataProvider.cs:
	* Gui/CTextEditorExtension.cs: Track APIs.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/DataProvider.cs: Track CompletionData API.

2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/DataProvider.cs: Track API.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/CProject.cs: Track API.

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* Gui/DataProvider.cs: implemented IComparable.

2008-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/DataProvider.cs: Track api changes.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.mdp: Updated projects.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/CBinding.PackageDetails.cs, gtk-gui/generated.cs,
	  gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/CBinding.AddPathDialog.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs,
	  gtk-gui/CBinding.GeneralOptionsPanel.cs,
	  gtk-gui/CBinding.CompilerPanel.cs,
	  gtk-gui/CBinding.OutputOptionsPanel.cs,
	  gtk-gui/CBinding.AddLibraryDialog.cs: Updated generated code.

2008-09-08  Mitchell Wheeler <mitchell.wheeler@gmail.com>

	* Gui/CTextEditorExtension.cs, Gui/AddLibraryDialog.cs,
	  Navigation/LanguageItemCommandHandler.cs,
	  Project/CProjectConfiguration.cs, Project/CProject.cs,
	  gtk-gui/CBinding.PackageDetails.cs, gtk-gui/generated.cs,
	  gtk-gui/CBinding.EditPackagesDialog.cs,